# coinapi-rest

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  USAGE.md  openapi.yaml  pyproject.toml  sonar-project.properties
.forgejo/workflows/: pythonpackage.yml  pythonpublish.yml
.github/: dependabot.yml
.github/workflows/: build.yml  pythonpackage.yml  pythonpublish.yml
docs/models/components/: modelsexchangetimeseriesitem.md  modelvwap24refrate.md  v1asset.md  v1exchange.md  v1exchangerate.md  v1exchangeratesrate.md  v1exchangeratestimeseriesitem.md  v1generaldata.md  v1icon.md  v1index.md  v1indexdata.md  v1indexdatacomponent.md  v1indexdataresponse.md  v1indextimeseriesitem.md  v1indexvalue.md  v1indexvaluecomponent.md  v1lasttrade.md  v1listingitem.md  v1metric.md  v1metricdata.md  v1orderbook.md  v1orderbookbase.md  v1orderbookdepth.md  v1quote.md  v1quotetrade.md  v1symbol.md  v1symbolmapping.md  v1timeseriesitem.md  v1timeseriesperiod.md  v1trade.md
docs/models/operations/: getspecificraterequest.md  getspecificrateresponse.md  getv1assetsassetidrequest.md  getv1assetsassetidresponse.md  getv1assetsiconssizerequest.md  getv1assetsiconssizeresponse.md  getv1assetsrequest.md  getv1assetsresponse.md  getv1baseratesrequest.md  getv1baseratesresponse.md  getv1exchangerateassetidbaseassetidquotehistoryrequest.md  getv1exchangerateassetidbaseassetidquotehistoryresponse.md  getv1exchangerateassetidbaserequest.md  getv1exchangerateassetidbaseresponse.md  getv1exchangeratehistoryperiodsresponse.md  getv1exchangesexchangeidrequest.md  getv1exchangesexchangeidresponse.md  getv1exchangesiconssizerequest.md  getv1exchangesiconssizeresponse.md  getv1exchangesrequest.md  getv1exchangesresponse.md  getv1historyperiodsresponse.md  getv1indexesindexidhistoryrequest.md  getv1indexesindexidhistoryresponse.md  getv1indexesindexidrequest.md  getv1indexesindexidresponse.md  getv1indexesindexidtimeseriesrequest.md  getv1indexesindexidtimeseriesresponse.md  getv1indexesindexidtimeseriestobeannouncedrequest.md  getv1indexesindexidtimeseriestobeannouncedresponse.md  getv1indexesresponse.md  getv1metadataresponse.md  getv1metricsassetcurrentrequest.md  getv1metricsassetcurrentresponse.md  getv1metricsassethistoryrequest.md  getv1metricsassethistoryresponse.md  getv1metricsassetlistingrequest.md  getv1metricsassetlistingresponse.md  getv1metricsexchangecurrentrequest.md  getv1metricsexchangecurrentresponse.md  (+62 more)
docs/sdks/coinapi/: README.md
docs/sdks/exchangerates/: README.md
docs/sdks/indexes/: README.md
docs/sdks/metadata/: README.md
docs/sdks/metrics/: README.md
docs/sdks/ohlcv/: README.md
docs/sdks/orderbook/: README.md
docs/sdks/orderbookl3/: README.md
docs/sdks/quotes/: README.md
docs/sdks/trades/: README.md
scripts/: lint.sh  test.sh
src/coinapi/: __init__.py  base.py  config.py  exchange_rates.py  indexes.py  metadata.py  metrics.py  ohlcv.py  order_book.py  order_book_l3.py  quotes.py  rest.py  trades.py
src/coinapi/_hooks/: __init__.py  hook_types.py  hooks.py
src/coinapi/models/components/: __init__.py  model_vwap24refrate.py  models_exchangetimeseriesitem.py  security.py  v1_asset.py  v1_exchange.py  v1_exchangerate.py  v1_exchangeratesrate.py  v1_exchangeratestimeseriesitem.py  v1_generaldata.py  v1_icon.py  v1_index.py  v1_indexdata.py  v1_indexdatacomponent.py  v1_indexdataresponse.py  v1_indextimeseriesitem.py  v1_indexvalue.py  v1_indexvaluecomponent.py  v1_lasttrade.py  v1_listingitem.py  v1_metric.py  v1_metricdata.py  v1_orderbook.py  v1_orderbookbase.py  v1_orderbookdepth.py  v1_quote.py  v1_quotetrade.py  v1_symbol.py  v1_symbolmapping.py  v1_timeseriesitem.py  v1_timeseriesperiod.py  v1_trade.py
src/coinapi/utils/: __init__.py  aliases.py  utils.py
tests/: conftest.py  test_base.py  test_exchange_rates.py  test_indexes.py  test_metadata.py  test_metrics.py  test_ohlcv.py  test_order_book.py  test_order_booky_l3.py  test_quotes.py  test_trades.py  test_utils.py
tests/__snapshots__/: test_exchange_rates.ambr  test_indexes.ambr  test_metadata.ambr  test_metrics.ambr  test_ohlcv.ambr  test_order_book.ambr  test_order_booky_l3.ambr  test_quotes.ambr  test_trades.ambr
tests/cassettes/test_exchange_rates/: test_get_specific_rate.yaml  test_get_v1_base_rates.yaml  test_get_v1_exchangerate_asset_id_base.yaml  test_get_v1_exchangerate_asset_id_base_asset_id_quote_history.yaml  test_get_v1_exchangerate_history_periods.yaml  test_get_v1_history_periods.yaml  test_get_v1_pair_history.yaml  test_get_v1_specific_rate.yaml
tests/cassettes/test_indexes/: test_get_v1_indexes.yaml  test_get_v1_indexes_index_id.yaml  test_get_v1_indexes_index_id_timeseries.yaml
tests/cassettes/test_metadata/: test_get_v1_asset_id.yaml  test_get_v1_assets.yaml  test_get_v1_exchange_id.yaml  test_get_v1_exchanges.yaml  test_get_v1_symbols.yaml  test_get_v1_symbols_exchange_id.yaml  test_get_v1_symbols_map.yaml
tests/cassettes/test_metrics/: test_get_v1_metrics.yaml  test_get_v1_metrics_asset_listing.yaml  test_get_v1_metrics_exchange.yaml  test_get_v1_metrics_exchange_current.yaml  test_get_v1_metrics_exchange_history.yaml  test_get_v1_metrics_symbol_listing.yaml
tests/cassettes/test_ohlcv/: test_get_v1_ohlcv_exchanges_exchange_id_history.yaml  test_get_v1_ohlcv_periods.yaml  test_get_v1_ohlcv_symbol_id_history.yaml  test_get_v1_ohlcv_symbol_id_latest.yaml
tests/cassettes/test_order_book/: test_get_v1_orderbooks_symbol_id_current.yaml  test_get_v1_orderbooks_symbol_id_history.yaml  test_get_v1_orderbooks_symbol_id_latest.yaml
tests/cassettes/test_order_booky_l3/: test_get_v1_orderbooks3_current.yaml  test_get_v1_orderbooks3_symbol_id_current.yaml
tests/cassettes/test_quotes/: test_get_v1_quotes_current.yaml  test_get_v1_quotes_latest.yaml  test_get_v1_quotes_symbol_id_current.yaml  test_get_v1_quotes_symbol_id_history.yaml  test_get_v1_quotes_symbol_id_latest.yaml
tests/cassettes/test_trades/: test_get_v1_trades_latest.yaml  test_get_v1_trades_symbol_id_history.yaml  test_get_v1_trades_symbol_id_latest.yaml
(+59 files in other folders)
